--- a/Instagram-Clone/build.gradle
+++ b/Instagram-Clone/build.gradle
@@ -10,23 +10,17 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:23.0.0'
+    implementation 'com.android.support:appcompat-v7:22.2.0'
     implementation 'com.parse.bolts:bolts-tasks:1.3.0'
     implementation 'com.parse:parse-android:1.13.0'
-    implementation 'com.google.android.gms:play-services:9.4.0'
-    implementation 'com.android.support:multidex:1.0.0'
 }
