--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -11,8 +10,7 @@ buildscript {
 
 allprojects {
     repositories {
-        google();
-        jcenter();
+        mavenCentral()
     }
 }
 
